# time-series

./: README.md  pyproject.toml
data/processed/: appl_price_history.csv
data/raw/: aapl_price_history.csv
notebooks/: 01_prepare_data.ipynb  02_smoothing_methods.ipynb  02_trend_smoothers.ipynb
