[tool.poetry]
name = "time-series"
version = "0.1.0"
description = ""
authors = ["Pakhapoom <pakhapoom.sar@gmail.com>"]
readme = "README.md"
packages = [{include = "time_series"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
