[tool.poetry]
name = "time-series"
version = "0.1.0"
description = ""
authors = ["Pakhapoom <pakhapoom.sar@gmail.com>"]
readme = "README.md"
packages = [{include = "time_series"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
ipykernel = "^6.24.0"
matplotlib = "^3.7.2"
statsmodels = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
